percent template engine

--- a/src/app/tester-tool.component.html
+++ b/src/app/tester-tool.component.html
@@ -4,8 +4,5 @@
 
 <button (click)="testConnectionAxl()">Test Connection</button>
 <button (click)="getPhoneAxl()">Get Phone</button>
-<pre>{{auth}} &amp; {{axlUrl}}</pre>
 <hr/>
-<pre>{{xmlRequest}}</pre>  
-<hr/>
-<pre>{{test}}</pre>
+<pre>{{output}}</pre>
