percent service done

--- a/src/app/tester-tool.component.html
+++ b/src/app/tester-tool.component.html
@@ -4,5 +4,7 @@
 
 <button (click)="testConnectionAxl()">Test Connection</button>
 <button (click)="getPhoneAxl()">Get Phone</button>
+<button (click)="parseTemplate()">Parse</button>
+
 <hr/>
 <pre>{{output}}</pre>
