--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         </div>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#lcuster">Cluster: {{cluster}}</a></li>
+          <li><a href="#lcuster">Cluster:</a></li>
           <li><a href="#login"><i class="material-icons">account_circle</i></a></li>
         </ul>
       </div>
