--- a/src/app/tester-tool.component.html
+++ b/src/app/tester-tool.component.html
@@ -1,10 +1,10 @@
-<label >FIELD 1<textarea ngDefaultControl [(ngModel)]="field1" ></textarea></label>
-<label >FIELD 2<textarea ngDefaultControl [(ngModel)]="field2" ></textarea></label>
+<label >FIELD 1<textarea ngDefaultControl [(ngModel)]="field1" rows="10"></textarea></label>
+<label >FIELD 2<textarea ngDefaultControl [(ngModel)]="field2" rows="10"></textarea></label>
 
 
 <button (click)="testConnectionAxl()">Test Connection</button>
 <button (click)="getPhoneAxl()">Get Phone</button>
-<button (click)="parseTemplate()">Parse</button>
+<button (click)="testYaml()">YAML</button>
 
 <hr/>
 <pre>{{output}}</pre>
