get variables from template

--- a/src/app/tester-tool.component.html
+++ b/src/app/tester-tool.component.html
@@ -4,7 +4,7 @@
 
 <button (click)="testConnectionAxl()">Test Connection</button>
 <button (click)="getPhoneAxl()">Get Phone</button>
-<button (click)="testYaml()">YAML</button>
+<button (click)="testCSV()">CSV</button>
 
 <hr/>
 <pre>{{output}}</pre>
