--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,7 @@
 <div class="container">
-  <div id="header" class="row">
-    <nav>
-      <div class="nav-wrapper black">
-        <div class="col s12">
-          <a href="/" class="brand-logo">
-            <img id="logo" src="../assets/images/logo-white35.png" />
-          </a>
-          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        </div>
-
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#lcuster">Cluster:</a></li>
-          <li><a href="#login"><i class="material-icons">account_circle</i></a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-  <router-outlet></router-outlet>
+    <mat-toolbar color="primary">
+        <a href="#"><i class="material-icons">menu</i></a>
+        <span>AXL Tools</span>        
+    </mat-toolbar>
+    <router-outlet></router-outlet>
 </div>
