--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ mat-card {
 }
 
 mat-card-actions {
-  border-top: 1px solid rgb(255, 171, 92);
+  border-top: 1px solid #ffda91;
 }
 
 .mat-form-field {
@@ -24,44 +24,56 @@ mat-card-actions {
   background-color: #f8bb38;
 }
 
-
-mat-card.log {
-  padding: 10px;
+mat-expansion-panel.log {
+  margin-bottom: 10px;
 }
 
-mat-card.log mat-card-title {
-  font-size: 20px;
-}
-
-mat-card.log mat-card-subtitle {
-  font-size: 16px;
-}
-
-mat-card.results  {
+.result  {
   background-color: #c5fd5d;
   
 }
 
-mat-card.results mat-expansion-panel {
-  background-color: #c5fd5d;
-}
-
-
-mat-card.errors {
+.error {
   background-color: #ffc7c7;
 
 }
 
-mat-card.errors mat-expansion-panel {
-  background-color: #ffc7c7;
-}
-
-.red-font {
+.fail {
   color: red;
+  margin-right: 15px;
 }
 
-.green-font {
+.success {
   color: #0daf0d;
+  margin-right: 15px;
+}
+
+mat-icon.toolbar {
+  margin-right: 15px;
+}
+
+mat-icon.account {
+  margin-right: 0px;
+}
+
+.toolbarstatus {
+  font-size: 16px;
+  /* font-weight: bold; */
+  color: #b8abdd;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+
+button.toolbar {
+  font-size: 18px;
+  /* font-weight: bold; */
+}
+
+mat-icon {
+  margin-right: 15px;
 }
 
 
