--- a/src/app/axltools/progress-log.component.html
+++ b/src/app/axltools/progress-log.component.html
@@ -1,7 +1,7 @@
 <div>
     <div *ngIf="recipe" class="operation">
         <h3>{{recipe.name}}</h3>
-        <p>{{step}}</p>
+        <p>{{currentStep}}</p>
         <mat-progress-bar mode="buffer" [value]="bulkProgress" [bufferValue]="stepProgress"></mat-progress-bar>
     </div>
     <br />
